chore: linking resume

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -147,7 +147,7 @@ const isRouteActive = (linkHref: string, currentPath: string): boolean => {
     >
       <a
         rel="noopener noreferrer"
-        href="#"
+        href="https://drive.google.com/file/d/13-01Wyta9OlCEmRlvRACJv8rQdiMIUqC/view"
         class="flex w-full items-center gap-1 hover:text-primary hover:underline"
         data-astro-prefetch
       >
