--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -35,8 +35,8 @@ import Layout from "../../layouts/Layout.astro";
             React
           </p>
           <p class="pt-2">Certificates:</p>
-          <ul class="flex flex-wrap items-center justify-center gap-2">
-            <li class="">
+          <ul class="flex flex-wrap items-center justify-center divide-x-2">
+            <li class="px-3">
               <a
                 href="https://scrimba.com/certificate/udx5yxHW/gfrontend"
                 rel="noopener noreferrer"
@@ -45,8 +45,7 @@ import Layout from "../../layouts/Layout.astro";
               </a>
             </li>
 
-            <div class="my-1 self-stretch bg-muted p-px"></div>
-            <li>
+            <li class="px-3">
               <a
                 rel="noopener noreferrer"
                 href="https://scrimba.com/certificate/udx5yxHW/greact"
@@ -55,8 +54,7 @@ import Layout from "../../layouts/Layout.astro";
               </a>
             </li>
 
-            <div class="my-1 self-stretch bg-muted p-px"></div>
-            <li>
+            <li class="px-3">
               <a
                 class="text-indigo-500 underline"
                 rel="noopener noreferrer"
@@ -78,16 +76,15 @@ import Layout from "../../layouts/Layout.astro";
             understand the concept and the structure of a language and how JavaScript Data Structure
             works under the hood.
           </p>
-          <ul class="flex w-full flex-wrap justify-center gap-2">
-            <li>
+          <ul class="flex w-full flex-wrap justify-center divide-x-2">
+            <li class="px-3">
               <a
                 class="text-indigo-500 underline"
                 href="https://frontendmasters.com/courses/algorithms/introduction/"
                 >Algorithm and Data structure Course</a
               >
             </li>
-            <div class="my-1 self-stretch bg-muted p-px"></div>
-            <li>
+            <li class="px-3">
               <a
                 rel="noopener noreferrer"
                 class="text-indigo-500 underline"
