style: main and project card

--- a/src/pages/about/index.astro
+++ b/src/pages/about/index.astro
@@ -4,7 +4,7 @@ import Layout from "../../layouts/Layout.astro";
 
 <Layout title="About Me"
   ><section class="mx-auto flex size-full max-w-prose flex-col items-center justify-center gap-4">
-    <h1 class="text-2xl text-primary md:text-3xl">Churchill Jay Sungcados</h1>
+    <h1 class="text-2xl font-semibold text-primary md:text-3xl">Churchill Jay Sungcados</h1>
     <div class="flex items-center justify-center gap-2 underline">
       <a href="mailto:churchillexe@gmail.com">churchillexe@gmail.com</a>
       <div class="my-1 self-stretch bg-muted p-px"></div>
