--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -63,27 +63,27 @@ const techStacksArrFiltered = TECH_STACKS.filter((stack) => techstackArr.include
 
   <h3
     class:list={[
-      "overflow-hidden not-hoverable:overflow-visible text-center text-xl font-bold capitalize",
+      "overflow-hidden not-hoverable:overflow-visible text-primary p-2 text-center text-2xl font-bold capitalize",
     ]}
   >
     {projectName}
   </h3>
   <Image
-    class:list={["size-full rounded-lg object-cover aspect-video object-center  "]}
+    class:list={["size-full  rounded-lg object-cover aspect-video object-center  "]}
     src={profileImg}
     alt={projectName}
     inferSize={true}
   />
   <div
     class:list={[
-      "absolute bottom-0 left-0 grid w-full grid-rows-[0fr] opacity-0 backdrop-blur shadow-glass rounded-t-lg  transition-[grid-template-rows_opacity] duration-500",
-      "bg-gradient-to-t from-white dark:from-black to-transparent",
+      "absolute bottom-0 left-0 grid w-full grid-rows-[0fr] opacity-0 backdrop-blur-2xl shadow-glass rounded-t-lg  transition-[grid-template-rows_opacity] duration-500 p-2",
+      "bg-gradient-to-r from-background/20 via-background to-background/20 ",
       " hoverable:group-hover:grid-rows-[1fr] hoverable:group-hover:opacity-100 not-hoverable:grid-rows-1 not-hoverable:opacity-100",
       { "grid-rows-1 opacity-100": showDetails },
     ]}
   >
     <div class:list={["overflow-hidden", { "overflow-visible": showDetails }]}>
-      <p class="mb-2 leading-6">{description}</p>
+      <p class="mb-2 p-2 leading-6">{description}</p>
       <div class="flex w-full flex-wrap items-center justify-around gap-4">
         <div
           id="stack-div"
