--- a/src/pages/blog/index.astro
+++ b/src/pages/blog/index.astro
@@ -6,7 +6,7 @@ const posts = await getCollection("posts");
 ---
 
 <Layout title="Contacts">
-  <section class="mx-auto flex w-full max-w-5xl flex-col items-center justify-center p-6">
+  <section class="mx-auto flex w-full max-w-5xl flex-col items-center justify-center gap-4 p-6">
     {
       posts.map((item) => (
         <a
