chore: update resume link

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -1,8 +1,6 @@
 ---
 import { ArrowUpRight, LucideLink2, Moon, MoveUpRight, Sun } from "lucide-react";
 
-//TODO: dashboard burger menu
-
 export const prerender = false;
 const pathname = Astro.url.pathname;
 
@@ -147,7 +145,7 @@ const isRouteActive = (linkHref: string, currentPath: string): boolean => {
     >
       <a
         rel="noopener noreferrer"
-        href="https://drive.google.com/file/d/13-01Wyta9OlCEmRlvRACJv8rQdiMIUqC/view"
+        href="https://drive.google.com/file/d/1jRkBvTSATMTiCY1ZoPuVx72mIFkTVKJg/view?usp=sharing"
         class="flex w-full items-center gap-1 hover:text-primary hover:underline"
         data-astro-prefetch
       >
