--- a/src/pages/blog/[slug].astro
+++ b/src/pages/blog/[slug].astro
@@ -20,21 +20,15 @@ const { item } = Astro.props;
 const { Content } = await item.render();
 ---
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const backId = document.getElementById("back-btn");
-    backId?.addEventListener("click", () => {
-      history.back();
-    });
-  });
-</script>
-
 <Layout title="My blog">
   <Prose>
-    <button
-      id="back-btn"
-      class="absolute left-2 top-0 text-3xl backdrop-blur-[3px] transition-[text-shadow] duration-700 hover:text-primary hover:[text-shadow:1px_1px_2px_black,_0_0_.1em_hsl(var(--primary-foreground))] dark:hover:[text-shadow:.5px_.5px_2px_black,_0_0_.1em_black]"
-      >&larr;</button
+    <a
+      href="/blog/"
+      class="absolute left-2 top-0 text-3xl no-underline backdrop-blur-[3px] transition-[text-shadow]
+      duration-700 hover:text-primary
+      hover:[text-shadow:1px_1px_2px_black,_0_0_.1em_hsl(var(--primary-foreground))]
+      dark:hover:[text-shadow:.5px_.5px_2px_black,_0_0_.1em_black]"
+      >&larr;</a
     >
     <Content />
   </Prose>
