feat: moved blog to own sub domain.. removing all blog related

--- a/src/components/Layouts/Header.astro
+++ b/src/components/Layouts/Header.astro
@@ -14,8 +14,8 @@ const pageLinks = [
     name: "Projects",
   },
   {
-    href: "/blog/",
-    name: "Blog",
+    href: "notes.tingexe.cc",
+    name: "Notes",
   },
   {
     href: "/about/",
